# learn-opengl-old

./: .gitignore  meson.build
glad/include/glad/: gl.h
src/: error_callback.c  error_callback.h  log.c  log.h  main.c  sakana.c  sakana.h
